# dotfiles

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .semantic-release.toml  .tmux.conf  .vimrc  .wezterm.lua  .zshrc  CHANGELOG.md  README.md  init.vim  install.sh  pyproject.toml  result
.agents/skills/: aftershoot-docs.skill
.claude/: settings.json
.claude/commands/: hard-review.md
.claude/skills/: personal-info  training-debug
.config/fish/: config.fish
.config/nix-darwin/: Makefile  darwin-configuration.nix  (+1 more)
.vim/: .netrwhist  shaun
ai_tools/: __init__.py  install.py  pyproject.toml
ai_tools/ai_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ai_tools/core/: __init__.py  errors.py  registry.py
ai_tools/hosts/: __init__.py  cli.py  mcp.py
ai_tools/tools/: reddit.py
claude/: claude.json
fish/: config.fish  config.fish.bak  fish_plugins  fish_variables
hypr/: hyprland.conf
kitty/: kitty.conf  kitty.conf.bak
nix/: .gitignore  Justfile  Makefile  README.md  SETUP-LINUX.md  flake.nix  result  rollback.sh  setup.sh
nix-darwin/: Makefile  flake.nix  result
nushell/: config.nu  env.nu  history.sqlite3  history.sqlite3-shm  history.sqlite3-wal  history.txt  plugin.nu
nvim/: coc-settings.json  init.lua  init.vim  lazy-lock.json  nvim
opencode/: opencode.json  package.json
scripts/: ai-tools-cli  ai-tools-mcp  install.linux.sh  install2.linux.fish  sessions.sh  tmux-jump.sh  tmux-open-jump.sh  tmux-toggle-popup-terminal.sh  tmux-toggle-scratchpad.sh  write_branch_commit.sh
shell/: aliases.fish  exports.fish
tmux/: .tmux.conf
(+103 files in other folders)
